k3s-cluster/apps/rancher/rancher-service-backup.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["192.168.1.23"],"port":80,"protocol":"TCP","serviceName":"cattle-system:rancher","allNodes":false},{"addresses":["192.168.1.23"],"port":443,"protocol":"TCP","serviceName":"cattle-system:rancher","allNodes":false}]'
    meta.helm.sh/release-name: rancher
    meta.helm.sh/release-namespace: cattle-system
    metallb.io/ip-allocated-from-pool: default-pool
  creationTimestamp: "2025-03-07T18:54:19Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: rancher
    app.kubernetes.io/managed-by: Helm
    chart: rancher-2.10.3
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
  resourceVersion: "223962"
  uid: c07b2314-4b81-44a4-800a-f6b3e3e29e45
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.206.223
  clusterIPs:
  - 10.43.206.223
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 32061
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https-internal
    nodePort: 32513
    port: 443
    protocol: TCP
    targetPort: 444
  selector:
    app: rancher
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.23
      ipMode: VIP
